--- a/.env
+++ b/.env
@@ -2,14 +2,18 @@
 NODE_ENV=development
 PORT=5000
 
-# Database Configuration (XAMPP Default)
+#Database
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
+DB_USER=rdfappuser
+DB_PASSWORD=Rdf2025@Strong!
 DB_NAME=rdf_sys
+DB_PORT=3306
+
+
 JWT_SECRET=your-secret-key
 JWT_REFRESH_SECRET=your-refresh-secret
 SENDGRID_API_KEY=your-sendgrid-key
+
 
 # Email Configuration (Gmail Example)
 SMTP_HOST=smtp.gmail.com 
@@ -17,24 +21,29 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=wakhiwakhi1@gmail.com
 SMTP_PASS=dccb fjwz hvso agiy
-SMTP_FROM=wakhiwakhi1@gmail.com
+SMTP_FROM=RDF System <noreply@rdf.gov.sz>
 
 # SMS Configuration (For future integration)
 SMS_PROVIDER_API_URL=
 SMS_PROVIDER_API_KEY=
 SMS_PROVIDER_SENDER_ID=RDF_SYSTEM
 
-JWT_SECRET=generate_long_random_string_here
-JWT_REFRESH_SECRET=generate_another_long_random_string
-JWT_ACCESS_EXPIRY=15m
+JWT_SECRET=this_string_secures_auth_tokens_for_the_RDF_software
+JWT_REFRESH_SECRET=lemibhalo_icinisa_kungena_kule_RDF_software
+JWT_ACCESS_EXPIRY=45m
 JWT_REFRESH_EXPIRY=7d
+
+
+# cors
+# FRONTEND_URL =
+# CORS_ORIGIN = https:
 
 # SENDGRID_API_KEY=your-sendgrid-api-key
 EMAIL_FROM=noreply@rdf.gov.sz
 EMAIL_FROM_NAME=RDF System
 
-BASE_URL=https://api.rdf.gov.sz
-FRONTEND_URL=https://rdf.gov.sz
+BASE_URL=http://102.23.132.105
+FRONTEND_URL==http://102.23.132.105
 
 BCRYPT_ROUNDS=12
 RATE_LIMIT_WINDOW_MS=900000
